feat: tweaks for margins

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                     </p>
 
                     <p>
-                        Currently, I’m looking for a <strong>Software Engineer</strong> role in <strong>Belgium</strong>, where I can apply my skills while continuing to learn and grow. 
-                        Let’s build something amazing together!
+                        Currently, I’m looking for a <strong>Software Engineer</strong> role in <strong>Belgium</strong>, where I can apply my skills while continuing to learn and grow.
                     </p>
                 </p>
             </ul>
@@ -54,7 +53,7 @@
 
         <section class="things-i-care-about">
             <h1>Things I Care About</h1>
-            <section>
+            <div>
                 <h3>Programming</h3>
                 <ul>
                     <p>
@@ -62,7 +61,7 @@
                         I started with <strong>Python</strong> and now I’m exploring <strong>Rust</strong> and <strong>Go</strong>. 
                     </p>
                     <p>
-                        I also have a deep interest in <strong>Esolangs</strong> (Esoteric Programming Languages) and recently started learning <strong>Uiua</strong>, a stack- and array-based language inspired by <strong>APL</strong>.
+                        I also have a deep interest in <strong>Esolangs</strong> (Esoteric Programming Languages) and recently started learning <strong><a href="https://www.uiua.org/">Uiua</a></strong>, a stack-based and array-based language inspired by <strong>APL</strong>.
                     </p>
                     <p>
                         Another longtime interest has been <strong>hacking/pentesting.</strong> 
@@ -70,8 +69,8 @@
                         My focus has been Network and Web Client challenges and I'm now diving into Reverse Engineering. 
                     </p>
                 </ul>
-            </section>
-            <section>
+            </div>
+            <div>
                 <h3>Mathematics</h3>
                 <ul>
                     <p>
@@ -88,9 +87,8 @@
                         I also love solving <strong><a href="https://projecteuler.net/about">Project Euler</a></strong> problems with Rust! You can find my solutions <a href="https://github.com/PiaCOS/project_euler">here</a>
                     </p>
                 </ul>
-            </section>
-        
-            <section>
+            </div>
+            <div>
                 <h3>Music & Audio Programming</h3>
                 <ul>
                     <p>
@@ -100,7 +98,7 @@
                         Right now, I’m learning <strong>MIDIR</strong>, a MIDI library for Rust! 
                     </p>
                 </ul>
-            </section>
+            </div>
         </section>
         <section class="Skills">
             <h1>Skills</h1>
@@ -194,13 +192,13 @@
         <section class="Education">
             <div>
                 <h1>Education</h1>
-                    <p class="main_text">IMT Nord-Europe | Master in Engineering | <em>09/2019 - 03/2023</em></p>
+                    <p class="main_text"><strong>IMT Nord-Europe</strong> | Master of Engineering in Computer Science| <em>09/2019 - 03/2023</em></p>
                     <ul class="secondary_text">
                         <li>Data Sciences (Python, ML, Deep Learning)</li>
                         <li>Programming (C, Java)</li>
                         <li>Mathematics</li>
                     </ul>
-                    <p class="main_text">CPGE Henri Bergson | PSI/MPSI | <em>09/2017 - 07/2019</em></p>
+                    <p class="main_text"><strong>CPGE Henri Bergson</strong> | PSI/MPSI | <em>09/2017 - 07/2019</em></p>
                     <ul class="secondary_text">
                         <li>Mathematics, Physics, Engineering Science</li>
                         <li>Programming (Python)</li>
