fix: typo and fmt

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </ul>
     </div>
 </nav>
-<hr>
 <body>
+    <hr>
     <div class="intro">
         <section class="Who-am-i">
             <ul>
@@ -47,17 +47,17 @@
                 </p>
             </ul>
         </section>
-        <hr>
     </div>
+    <hr>
     <div class="main">
 
-        <section class="things-i-care-about">
-            <h1>Things I Care About</h1>
+        <section class="what-im-into">
+            <h1>What I'm Into</h1>
             <div>
                 <h3>Programming</h3>
                 <ul>
                     <p>
-                        Programming is one of my biggest passions in life.
+                        Programming is one of my biggest passions.
                         I started with <strong>Python</strong> and now I’m exploring <strong>Rust</strong> and <strong>Go</strong>. 
                     </p>
                     <p>
@@ -74,14 +74,14 @@
                 <h3>Mathematics</h3>
                 <ul>
                     <p>
-                        Ever since I was a kid, I’ve been <strong>fascinated by mathematics</strong>.  
-                        Even after graduating, I realized I still wanted to study it further!  
+                        I've always been fascinated by <strong>mathematics</strong>.  
+                        After graduating, I realized I still wanted to study it further!  
                         My main area of interest now is <strong>Category Theory</strong>, which I’m learning through these amazing books:
                     </p>
                     <ul>
-                        <li><strong>Category Theory in Context</strong> – Emily Riehl <em>(Halfway through!)</em></li>
-                        <li><strong>Category Theory</strong> – Steve Awodey <em>(One of the most interesting books I've read!)</em></li>
-                        <li><strong>Category Theory for Programmers</strong> – Bartosz Milewski <em>(Just starting!)</em></li>
+                        <li><strong>Category Theory in Context</strong> – Emily Riehl <em>(Halfway through)</em></li>
+                        <li><strong>Category Theory</strong> – Steve Awodey <em>(One of the most interesting books I've read)</em></li>
+                        <li><strong>Category Theory for Programmers</strong> – Bartosz Milewski <em>(Just starting)</em></li>
                     </ul>
                     <p>
                         I also love solving <strong><a href="https://projecteuler.net/about">Project Euler</a></strong> problems with Rust! You can find my solutions <a href="https://github.com/PiaCOS/project_euler">here</a>
