--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <li><strong>Category Theory for Programmers</strong> – Bartosz Milewski <em>(Just starting)</em></li>
                     </ul>
                     <p>
-                        I also love solving <strong><a href="https://projecteuler.net/about">Project Euler</a></strong> problems with Rust! You can find my solutions <a href="https://github.com/PiaCOS/project_euler">here</a>
+                        I also love solving <strong><a href="https://projecteuler.net/about">Project Euler</a></strong> problems with Rust. You can find my solutions <a href="https://github.com/PiaCOS/project_euler">here</a>.
                     </p>
                 </ul>
             </div>
@@ -95,7 +95,7 @@
                         My other main interest is Music and everything related to Audio. 
                         Since <strong>2022</strong>, I’ve been composing music for video games (some of which are listed below).  
                         I’m also fascinated by <strong>audio & MIDI programming</strong>, I mainly use <strong>Max/MSP</strong> with <strong>Ableton Live</strong> and <strong>VCV Rack</strong>.  
-                        Right now, I’m learning <strong>MIDIR</strong>, a MIDI library for Rust! 
+                        Right now, I’m learning <strong>MIDIR</strong>, a MIDI library for Rust. 
                     </p>
                 </ul>
             </div>
@@ -110,6 +110,7 @@
                 <li><strong>Data Analysis:</strong> <em class="secondary_text">SQL: Apache Spark</em></li>
                 <li><strong>Development:</strong> <em class="secondary_text">Pytest, Git, uv, HTML, CSS</em></li>
                 <li><strong>Audio Programming:</strong> <em class="secondary_text">Max/MSP, Pure Data, Midir(Rust)</em></li>
+                <li><strong>Operating Systems:</strong><em class="secondary_text">Linux (Arch Linux, Endeavour, Ubuntu), MacOS</em></li>
             </ul>
         </section>
         <section class="Projects">
@@ -147,10 +148,10 @@
                 <h3>Audio Projects</h3>
                 <p>
                     <li>
-                        <strong>BIRBZ</strong> by Lison Raimbault - Music composition and Sound Design
+                        <strong>BIRBZ</strong> by <a href=https://oleafyo.itch.io/>Lison Raimbault</a> - Music composition and Sound Design.
                     </li>
                     <li>
-                        <a href="https://piktura.itch.io/izdihar">Izdihar</a> by Piktura - Music composition</a>
+                        <a href="https://piktura.itch.io/izdihar">Izdihar</a> by Piktura - Music composition.</a>
                     </li>
                 </p>
             </div>
@@ -162,23 +163,26 @@
                 <ul>
                     <h3>Junior Data Scientist at Heartkinetics | <em>03/2023 - 02/2024</em></h3>
                     <ul class="content">
-                        <li>Built Deep Learning models using the Mayo Clinic Database</li>
-                        <li>Designed and optimized ML Models on internal data</li>
-                        <li>Performed data analysis for clinical studies</li>
+                        <li>Built Deep Learning models predicting heart diseases from biosignals with Pytorch.</li>
+                        <li>Designed and optimized ML Models on internal data with scikit-learn (XGBoost) and MLFlow.</li>
+                        <li>Implemented readers and processes in a DSP pipeline in Python.</li>
+                        <li>Performed data analysis for clinical studies in Python.</li>
                     </ul>
                 </ul>
                 <ul>
                     <h3>Data Analyst Intern at Heartkinetics | <em>09/2022 - 03/2023</em></h3>
                     <ul class="content">
-                        <li>Data cleaning and statistical analysis for clinical studies</li>
-                        <li>Conduct study to assess the quality of biosignals</li>
+                        <li>Performed data cleaning and statistical analysis for clinical studies in Python. [1]</li>
+                        <li>Conducted study to assess the quality of biosignals.</li>
+                        <li>Designed unit tests for a DSP pipeline with pytest.</li>
                     </ul>
                 </ul>
                 <ul>
                     <h3>Research Engineer Intern at Prism CNRS | <em>04/2021 - 08/2021</em></h3>
                     <ul class="content">
-                        <li>Planned, designed and executed a protocol to assess performances of a spatial audio system</li>
-                        <li>Performed statistical analysis of the results</li>
+                        <li>Planned, designed and executed a protocol to assess performances of a spatial audio system. [2]</li>
+                        <li>Built a test interface and a multi-channel realtime audio converter in Max/MSP.</li>
+                        <li>Performed statistical analysis of the results with Python.</li>
                     </ul>
                 </ul>
             </div>
@@ -186,8 +190,8 @@
 
         <section class="Publications">
             <h1>Publications</h1>
-            <li><a href="https://www.mdpi.com/1424-8220/24/7/2139" class="main_text">Hossein, A., Abdessater, E., Balali, P., Cosneau, E., Gorlier, D., Rabineau, J., ... & Van De Borne, P. (2024). Smartphone-Derived Seismocardiography: Robust Approach for Accurate Cardiac Energy Assessment in Patients with Various Cardiovascular Conditions. Sensors, 24(7), 2139.</a></li>
-            <li><a href="https://www.mdpi.com/1424-8220/24/7/2139" class="main_text">Vidal, A., Cosneau, E., Ystad, S., Aramaki, M., & Kronland-Martinet, R. (2022, April). Évaluation perceptive de systèmes de son 3D en présence de perturbations. In 16ème Congrès Français d'Acoustique, CFA2022.</a></li>
+            <li>[1] <a href="https://www.mdpi.com/1424-8220/24/7/2139" class="main_text">Hossein, A., Abdessater, E., Balali, P., Cosneau, E., Gorlier, D., Rabineau, J., ... & Van De Borne, P. (2024). Smartphone-Derived Seismocardiography: Robust Approach for Accurate Cardiac Energy Assessment in Patients with Various Cardiovascular Conditions. Sensors, 24(7), 2139.</a></li>
+            <li>[2] <a href="https://www.mdpi.com/1424-8220/24/7/2139" class="main_text">Vidal, A., Cosneau, E., Ystad, S., Aramaki, M., & Kronland-Martinet, R. (2022, April). Évaluation perceptive de systèmes de son 3D en présence de perturbations. In 16ème Congrès Français d'Acoustique, CFA2022.</a></li>
         </section>
         <section class="Education">
             <div>
