--- a/index.html
+++ b/index.html
@@ -119,29 +119,33 @@
                 <h3>Programming Projects</h3>
                 <ul>
                     <li>
-                        <strong><a href="https://github.com/kserrec/lambda-core/tree/main">LAMBDA-CORE</a></strong> - a repository dedicated to showcasing implementations of the "core" of lambda calculus in every programming language
-                        <p>I contributed with solutions in Python and Go</p>
+                        <strong><a href="https://github.com/kserrec/lambda-core/tree/main">lambda-core</a></strong> - a repository dedicated to showcasing implementations of the "core" of lambda calculus in every programming language
+                        <ul><li>I contributed with solutions in Python and Go</li></ul>
                     </li>
+                    <br>
                     <li>
-                        <strong><a href="https://github.com/PiaCOS/gomodoro">GOMODORO</a></strong> - a simple CLI Pomodoro made with <strong>GO</strong> which play sounds cues at the start of each sessions.
+                        <strong><a href="https://github.com/PiaCOS/gomodoro">gomodoro</a></strong> - a simple CLI Pomodoro made with <strong>GO</strong> which play sounds cues at the start of each sessions.
                         <ul>
                             <li>flag: <em>command-line flag parsing</em></li>
                             <li>beep: <em>playback embeded audio files</em></li>
                         </ul>
                     </li>
+                    <br>
                     <li>
-                        <strong><a href="https://github.com/PiaCOS/treels">TREELS</a></strong> - a replica of the CLI command <strong>tree</strong> made in <strong>Rust</strong>.
+                        <strong><a href="https://github.com/PiaCOS/treels">treels</a></strong> - a replica of the CLI command <strong>tree</strong> made in <strong>Rust</strong>.
                         <ul>
                             <li>clap: <em>command-line flag parsing</em></li>
                         </ul>
                     </li>
+                    <br>
                     <li>
-                        <strong>POLYSEQ</strong> (current project) - a midi squencer desktop app made in <strong>Rust</strong>.
+                        <strong>polyseq</strong> (current project) - a midi squencer desktop app made in <strong>Rust</strong>.
                         <ul>
                             <li>slint: <em>declarative GUI toolkit</em></li>
                             <li>midir: <em>cross-platform realtime midi processing</em></li>
                         </ul>
                     </li>
+                    <br>
                 </ul>
             </div>
             <div>
