feat: added the brainfuck interpreter

--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
                 <h3>Programming Projects</h3>
                 <ul>
                     <li>
+                        <strong><a href="https://github.com/PiaCOS/brainfuck_interpreter">brainfuck_interpreter</a></strong> - a simple brainfuck interpreter in <strong>Python</strong>.
+                        <ul><li>pytest</li></ul>
+                    </li>
+                    <br>
+                    <li>
                         <strong><a href="https://github.com/kserrec/lambda-core/tree/main">lambda-core</a></strong> - a repository dedicated to showcasing implementations of the "core" of lambda calculus in every programming language
                         <ul><li>I contributed with solutions in Python and Go</li></ul>
                     </li>
