--- a/index.html
+++ b/index.html
@@ -120,7 +120,10 @@
                 <ul>
                     <li>
                         <strong><a href="https://github.com/PiaCOS/brainfuck_interpreter">brainfuck_interpreter</a></strong> - a simple brainfuck interpreter in <strong>Python</strong>.
-                        <ul><li>pytest</li></ul>
+                        <ul>
+                            <li>pytest</li>
+                            <li>uv</li>
+                        </ul>
                     </li>
                     <br>
                     <li>
