--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                         <ul>
                             <li>pytest</li>
                             <li>uv</li>
+                            <li>ruff</li>
                         </ul>
                     </li>
                     <br>
