fix: typo and fmt

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                     <p>
                         Welcome to my personal website, which serves as both my portfolio and resume. 
                         Here, you’ll find a collection of my projects, experiences, and passions. 
-                        Feel free to check out my <a href="[Github URL]">GitHub</a> to see what I’m up to!
+                        Feel free to check out my <a href="[Github URL]">GitHub</a> to see what I’m up to.
                     </p>
 
                     <p>
                         I’m a <strong>Junior Data Scientist</strong> with a deep passion for <strong>Programming</strong>, <strong>Mathematics</strong> and <strong>Music</strong>. 
-                        I’ve always been driven by the challenge of solving complex problems, whether in code or through sound!
+                        I’ve always been driven by the challenge of solving complex problems, whether in code or through sound.
                     </p>
 
                     <p>
@@ -110,7 +110,7 @@
                 <li><strong>Data Analysis:</strong> <em class="secondary_text">SQL: Apache Spark</em></li>
                 <li><strong>Development:</strong> <em class="secondary_text">Pytest, Git, uv, HTML, CSS</em></li>
                 <li><strong>Audio Programming:</strong> <em class="secondary_text">Max/MSP, Pure Data, Midir(Rust)</em></li>
-                <li><strong>Operating Systems:</strong><em class="secondary_text">Linux (Arch Linux, Endeavour, Ubuntu), MacOS</em></li>
+                <li><strong>Operating Systems:</strong> <em class="secondary_text">Linux (Arch Linux, Endeavour, Ubuntu), MacOS</em></li>
             </ul>
         </section>
         <section class="Projects">
@@ -121,15 +121,15 @@
                     <li>
                         <strong><a href="https://github.com/PiaCOS/brainfuck_interpreter">brainfuck_interpreter</a></strong> - a simple brainfuck interpreter in <strong>Python</strong>.
                         <ul>
-                            <li>pytest</li>
-                            <li>uv</li>
-                            <li>ruff</li>
+                            <li>pytest: <em>a Python testing framework</em></li>
+                            <li>uv: <em>a fast package installer</em></li>
+                            <li>ruff: <em>a Python linter and formatter</em></li>
                         </ul>
                     </li>
                     <br>
                     <li>
                         <strong><a href="https://github.com/kserrec/lambda-core/tree/main">lambda-core</a></strong> - a repository dedicated to showcasing implementations of the "core" of lambda calculus in every programming language
-                        <ul><li>I contributed with solutions in Python and Go</li></ul>
+                        <ul><li>I contributed with solutions in <strong>Python</strong> and <string>Got</string>.</li></ul>
                     </li>
                     <br>
                     <li>
@@ -176,26 +176,26 @@
                 <ul>
                     <h3>Junior Data Scientist at Heartkinetics | <em>03/2023 - 02/2024</em></h3>
                     <ul class="content">
-                        <li>Built Deep Learning models predicting heart diseases from biosignals with Pytorch.</li>
-                        <li>Designed and optimized ML Models on internal data with scikit-learn (XGBoost) and MLFlow.</li>
-                        <li>Implemented readers and processes in a DSP pipeline in Python.</li>
-                        <li>Performed data analysis for clinical studies in Python.</li>
+                        <li>Built Deep Learning models predicting heart diseases from biosignals with <strong>Pytorch</strong>.</li>
+                        <li>Designed and optimized ML Models on internal data with <strong>scikit-learn (XGBoost) and MLFlow</strong>.</li>
+                        <li>Implemented readers and processes in a <strong>DSP pipeline</strong> in Python.</li>
+                        <li>Performed <strong>data analysis</strong> for clinical studies in Python. [1]</li>
                     </ul>
                 </ul>
                 <ul>
                     <h3>Data Analyst Intern at Heartkinetics | <em>09/2022 - 03/2023</em></h3>
                     <ul class="content">
-                        <li>Performed data cleaning and statistical analysis for clinical studies in Python. [1]</li>
+                        <li>Performed <strong>data cleaning and statistical analysis</strong> for clinical studies in Python.</li>
                         <li>Conducted study to assess the quality of biosignals.</li>
-                        <li>Designed unit tests for a DSP pipeline with pytest.</li>
+                        <li>Designed <strong>unit tests</strong> for a DSP pipeline with pytest.</li>
                     </ul>
                 </ul>
                 <ul>
                     <h3>Research Engineer Intern at Prism CNRS | <em>04/2021 - 08/2021</em></h3>
                     <ul class="content">
                         <li>Planned, designed and executed a protocol to assess performances of a spatial audio system. [2]</li>
-                        <li>Built a test interface and a multi-channel realtime audio converter in Max/MSP.</li>
-                        <li>Performed statistical analysis of the results with Python.</li>
+                        <li>Built a test interface and a <strong>multi-channel realtime audio converter in Max/MSP</strong>.</li>
+                        <li><strong>Performed statistical</strong> analysis of the results with Python.</li>
                     </ul>
                 </ul>
             </div>
