--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li class="horizontal">elliotcosneau@gmail.com</li>
         </ul>
     </div>
+    <div class="box" id="towerBox"></div>
 </nav>
 <body>
     <hr>
