fix: broken link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             Software Engineer - Data Scientist
         </h2>
         <ul>
-            <li class="horizontal"><a href="www.linkedin.com/in/elliot-cosneau-390889195">Linkedin</a></li>
+            <li class="horizontal"><a href="https://www.linkedin.com/in/elliot-cosneau-390889195">Linkedin</a></li>
             <li class="horizontal">|</li>
             <li class="horizontal"><a href="https://github.com/PiaCOS">Github</a></li>
             <li class="horizontal">|</li>
