feat: updated content

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <ul>
                     <p>
                         Programming is one of my biggest passions.
-                        I started with <strong>Python</strong> and now I’m exploring <strong>Rust</strong> and <strong>Go</strong>. 
+			I started with <strong>Python</strong> and now I’m exploring <strong>Rust</strong>, <strong>Haskell</strong> and <strong>Go</strong>. 
                     </p>
                     <p>
                         I also have a deep interest in <strong>Esolangs</strong> (Esoteric Programming Languages) and recently started learning <strong><a href="https://www.uiua.org/">Uiua</a></strong>, a stack-based and array-based language inspired by <strong>APL</strong>.
@@ -104,7 +104,7 @@
         <section class="Skills">
             <h1>Skills</h1>
             <ul class="skill-set main_text">
-                <li><strong>Languages:</strong> <em class="secondary_text">Python, Rust, Go</em></li>
+                <li><strong>Languages:</strong> <em class="secondary_text">Python, Rust, Haskell, Go</em></li>
                 <li><strong>Data Science:</strong> <em class="secondary_text">Pandas, Numpy, Scipy, Jupyter</em></li>
                 <li><strong>Machine Learning:</strong> <em class="secondary_text">Pytorch, Sklearn, MLFLow</em></li>
                 <li><strong>Data Visualization:</strong> <em class="secondary_text">Matplotlib, Seaborn</em></li>
