--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elliot Cosneau - PiaCOS</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <nav class="Navbar">
     <div>
@@ -58,8 +58,8 @@
                 <h3>Programming</h3>
                 <ul>
                     <p>
-                        Programming is one of my biggest passions.
-			I started with <strong>Python</strong> and now I’m exploring <strong>Rust</strong>, <strong>Haskell</strong> and <strong>Go</strong>. 
+                        Programming is one of my biggest passions. 
+                        I started with <strong>Python</strong> and now I’m exploring <strong>Gleam</strong>, <strong>Rust</strong> and a bit of <strong>Go</strong>. 
                     </p>
                     <p>
                         I also have a deep interest in <strong>Esolangs</strong> (Esoteric Programming Languages) and recently started learning <strong><a href="https://www.uiua.org/">Uiua</a></strong>, a stack-based and array-based language inspired by <strong>APL</strong>.
@@ -104,7 +104,7 @@
         <section class="Skills">
             <h1>Skills</h1>
             <ul class="skill-set main_text">
-                <li><strong>Languages:</strong> <em class="secondary_text">Python, Rust, Haskell, Go</em></li>
+                <li><strong>Languages:</strong> <em class="secondary_text">Python, Gleam, Rust, Go</em></li>
                 <li><strong>Data Science:</strong> <em class="secondary_text">Pandas, Numpy, Scipy, Jupyter</em></li>
                 <li><strong>Machine Learning:</strong> <em class="secondary_text">Pytorch, Sklearn, MLFLow</em></li>
                 <li><strong>Data Visualization:</strong> <em class="secondary_text">Matplotlib, Seaborn</em></li>
@@ -119,6 +119,21 @@
             <div>
                 <h3>Programming Projects</h3>
                 <ul>
+                    <li>
+                        <strong><a href="https://github.com/PiaCOS/quaternion_gleam">quaternion</a></strong> - A simple quaternion implementation made with and for Gleam. <strong>Gleam</strong> for this website.
+                        <ul>
+                            <li>gleeunit: <em>a Gleam testing framework</em></li>
+                        </ul>
+                    </li>
+                    <br>
+                    <li>
+                        <strong><a href="https://github.com/PiaCOS/gleam_website">website-backend</a></strong> - a simple backend made with <strong>Gleam</strong> for another version of this website.
+                        <ul>
+                            <li>mist: <em>a high performance pure Gleam HTTP 1.1 server</em></li>
+                            <li>wisp: <em>a practical Gleam web framework for rapid development and easy maintenance</em></li>
+                        </ul>
+                    </li>
+                    <br>
                     <li>
                         <strong><a href="https://github.com/PiaCOS/brainfuck_interpreter">brainfuck_interpreter</a></strong> - a simple brainfuck interpreter in <strong>Python</strong>.
                         <ul>
@@ -225,9 +240,6 @@
             </div>
         </section>
     </div>
-    
-
-
     <script src="js/main.js"></script> 
 </body>
 <link rel="preconnect" href="https://fonts.googleapis.com">
