--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <h3>Programming Projects</h3>
                 <ul>
                     <li>
-                        <strong><a href="https://github.com/PiaCOS/quaternion_gleam">quaternion</a></strong> - A simple quaternion implementation made with and for Gleam. <strong>Gleam</strong> for this website.
+                        <strong><a href="https://github.com/PiaCOS/quaternion_gleam">quaternion</a></strong> - A simple quaternion implementation made with and for Gleam.
                         <ul>
                             <li>gleeunit: <em>a Gleam testing framework</em></li>
                         </ul>
